fixed missing scrollbar (#104)

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -11,3 +11,16 @@
 body {
   overflow: hidden;
 }
+
+#root > .container {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+}
+
+main {
+  flex: 1; /* takes remaining space */
+
+      overflow-x: hidden;
+    overflow-y: auto;
+}
